--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,17 @@ repositories {
 }
 
 dependencies {
-    implementation("com.slack.api:bolt:1.21.2")
-    implementation("com.slack.api:bolt-servlet:1.21.2")
-    implementation("com.slack.api:bolt-jetty:1.21.2")
-    implementation("org.slf4j:slf4j-simple:1.7.33")
-    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation('com.slack.api:bolt:1.28.0')
+    implementation('com.slack.api:bolt-servlet:1.28.0')
+    implementation('com.slack.api:bolt-jetty:1.28.0')
+    implementation('org.slf4j:slf4j-simple:2.0.5')
+    implementation('com.googlecode.json-simple:json-simple:1.1.1')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 application {
-    mainClassName = "hello.MyApp"
+    mainClassName = "function.MyApp"
 }
 
 run {
